--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-/node_modules
+frontend/node_modules
+backend/node_modules
 
 # testing
 /coverage
@@ -11,6 +12,7 @@ next.config.js
 /build
 
 # misc
+.env
 .DS_Store
 
 # debug
