Add image uploading

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.740.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.0",
@@ -19,9 +20,10 @@
     "@types/react-dom": "^18.2.4",
     "bootstrap": "^5.2.3",
     "mdb-react-ui-kit": "^6.0.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-circle-flags": "^0.0.19",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.4.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
