--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.741.0",
+    "@aws-sdk/s3-request-presigner": "^3.741.0",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
