--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@ next.config.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# terraform
+.terraform/
+*.tfstate
+*.tfstate.backup
+crash.log
